--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     font-family: 'Poppins',cursive;
 }
 body{
-    color: azure;
+    color: rgb(17, 17, 17);
     width: 100%;
     height: 100vh;
     display: flex;
