--- a/css/style.css
+++ b/css/style.css
@@ -50,30 +50,11 @@ body{
 .greetings > span:nth-child(7){
     animation-delay: 1.4s;
 }
-.greetings > span:nth-child(8){
-    animation-delay: 1.6s;
-}
-.greetings > span:nth-child(9){
-    animation-delay: 1.8s ;
-}
-.greetings > span:nth-child(10){
-    animation-delay: 2.0s ;
-}
-.greetings > span:nth-child(11){
-    animation-delay: 2.4s;
-}
-.greetings > span:nth-child(12){
-    animation-delay: 2.6s ;
-}
-.greetings > span:nth-child(13){
-    animation-delay: 2.8s ;
-}
-.greetings > span:nth-child(14){
-    animation-delay: 3s;
-}
+
 
 .description{
     font-size: 1.0rem;
+    color: rgb(255, 255, 255);
     margin-bottom: 20px;
 }
 
