--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
 }
 .greetings{
     font-size: 6rem;
@@ -22,7 +22,7 @@ body{
 @keyframes glow{
     0%, 100%{
         color: #fff;
-        text-shadow: 0 0 12px #39c6d6, 0 0 50px #39c6d6, 0 0 100px #39c6d6;
+        text-shadow: 0 0 12px #b4bfc0, 0 0 50px #b4bfc0, 0 0 100px #b4bfc0;
     }
     10%, 90%{
         color: #111;
@@ -51,7 +51,59 @@ body{
     animation-delay: 1.4s;
 }
 
+.Login {
+    width: 220px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
 
+.Login:before {
+    content: '';
+    background: linear-gradient(45deg, #2b2a2a, #c2bcbc, #c2bcbc, #c2bcbc, #c2bcbc, #c2bcbc, #c2bcbc, #c2bcbc, #c2bcbc);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.Login:active {
+    color: #000
+}
+
+.Login:active:after {
+    background: transparent;
+}
+
+.Login:hover:before {
+    opacity: 1;
+}
+
+.Login:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
 .description{
     font-size: 1.0rem;
     color: rgb(255, 255, 255);
